Removed bug in card content spacing

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -3611,20 +3611,23 @@ h1:target .heading-anchor:before, h2:target .heading-anchor:before, h3:target .h
 .card__flex--1 {
   flex-direction: row;
 }
+.card__flex--1 .card__content {
+  margin: 1.5rem 0 0 0;
+}
 @media screen and (min-width: 37em) {
   .card__flex--1 {
     flex-direction: column;
   }
   .card__flex--1 .card__content {
-    margin-top: 0;
+    margin: 0;
   }
 }
 
 .card__flex--2 {
   flex-direction: row;
 }
-.card__flex--2 .card_content {
-  margin: 2rem 0 0 0;
+.card__flex--2 .card__content {
+  margin: 1.5rem 0 0 0;
 }
 @media screen and (min-width: 37em) {
   .card__flex--2 {
